--- a/src/Presentation/Nop.Web/Views/Product/ProductTemplate.Simple.cshtml
+++ b/src/Presentation/Nop.Web/Views/Product/ProductTemplate.Simple.cshtml
@@ -79,7 +79,10 @@
                         <!--product reviews-->
                         @await Html.PartialAsync("_ProductReviewOverview", Model.ProductReviewOverview)
                         <!--manufacturers-->
-                        @await Html.PartialAsync("_ProductManufacturers", Model.ProductManufacturers)
+                        @if(Model.ShowManufacturers)
+                        { 
+                            @await Html.PartialAsync("_ProductManufacturers", Model.ProductManufacturers)
+                        }
                         <!--availability-->
                         @await Html.PartialAsync("_Availability", Model)
                         <!--SKU, MAN, GTIN, vendor-->
